feat: format and add id to swagger handler documentation
